--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
    <nav class="nav">
     <div class="container">
-        <div class="nav__left">
+        <div class="nav__left flex">
             <a href="#!" class="nav__logo">
                 <img src="image/nav/logo.svg" alt="">
             </a>
-            <ul class="nav__list">
+            <ul class="nav__list flex">
                 <li>
                     <a href="#!" class="nav__link">Home</a>
                 </li>
@@ -29,13 +29,14 @@
                 </li>
             </ul>
         </div>
-        <div class="nav__right">
+        <div class="nav__right flex">
             <select name="" id="">
                 <option value="">En</option>
                 <option value="">Ru</option>
                 <option value="">Uz</option>
             </select>
-            <button class="nav__btn">Login</button>
+            <i class="fa-solid fa-globe"></i>
+            <button class="nav__btn btn">Login</button>
         </div>
     </div>
    </nav>
