header banner html done

--- a/index.html
+++ b/index.html
@@ -1,44 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-   <nav class="nav">
-    <div class="container">
-        <div class="nav__left flex">
-            <a href="#!" class="nav__logo">
-                <img src="image/nav/logo.svg" alt="">
-            </a>
-            <ul class="nav__list flex">
-                <li>
-                    <a href="#!" class="nav__link">Home</a>
-                </li>
-                <li>
-                    <a href="#!" class="nav__link">Courses</a>
-                </li>
-                <li>
-                    <a href="#!" class="nav__link">Webinar</a>
-                </li>
-                <li>
-                    <a href="#!" class="nav__link">Pricing</a>
-                </li>
-            </ul>
+    <nav class="nav">
+        <div class="container">
+            <div class="nav__left flex">
+                <a href="#!" class="nav__logo">
+                    <img src="image/nav/logo.svg" alt="">
+                </a>
+                <ul class="nav__list flex">
+                    <li>
+                        <a href="#!" class="nav__link">Home</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="nav__link">Courses</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="nav__link">Webinar</a>
+                    </li>
+                    <li>
+                        <a href="#!" class="nav__link">Pricing</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="nav__right flex">
+                <select name="" id="">
+                    <option value="">En</option>
+                    <option value="">Ru</option>
+                    <option value="">Uz</option>
+                </select>
+                <i class="fa-solid fa-globe"></i>
+                <button class="nav__btn btn">Login</button>
+            </div>
         </div>
-        <div class="nav__right flex">
-            <select name="" id="">
-                <option value="">En</option>
-                <option value="">Ru</option>
-                <option value="">Uz</option>
-            </select>
-            <i class="fa-solid fa-globe"></i>
-            <button class="nav__btn btn">Login</button>
+    </nav>
+    <header class="header">
+        <div class="header__banner">
+            <img src="image/header/image.png" alt="" class="header__img1">
+            <img src="image/header/zmdi_lamp.png" alt="" class="header__img2">
+            <img src="image/header/kitob.svg" alt="" class="header__img3">
+            <div class="header__card">
+                <div class="header__users">
+                    <img src="image/header/card/1-odam.svg" alt="">
+                    <img src="image/header/card/2-odam.svg" alt="">
+                    <img src="image/header/card/3-odam.png" alt="">
+                    <img src="image/header/card/4-odam.svg" alt="">
+                </div>
+                <p class="header__card-text">
+                    More than 80k+ Students <span class="header__span">joined!</span>
+                </p>
+            </div>
         </div>
-    </div>
-   </nav>
+        <div class="header__desc">
+            
+        </div>
+    </header>
 </body>
+
 </html>
